--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 </head>
 <body>
     <header>
+<nav>
+    <h3>Bangladesh 2.0</h3>
 
+</nav>
+<div class="banner">
+    <div class="banner-content">
+
+    </div>
+    <img src="projects\Bangladesh2.0\assets\hero.png" alt="">
+</div>
 
     </header>
     <main>
@@ -15,7 +24,7 @@
     </main>
     <footer>
 
-        
+
     </footer>
 </body>
 </html>
