--- a/index.html
+++ b/index.html
@@ -4,22 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh2.0</title>
+    <link rel="stylesheet" href="styles/banner.css">
 </head>
 <body>
-    <header>
+    <header class="header">
 <nav>
-    <h3>Bangladesh 2.0</h3>
-
+    
 </nav>
 <div class="banner">
     <div class="banner-content">
+<h5 class="banner-title">Bangladesh 2.0</h5>
+<p class="pbanner-description">
+    <h1>Idea , innovation ,
+vision and challenges in New Bangladesh.</h1>
+</p>
+<button class="btn-primary">Explore new Bnagladesh</button>
 
     </div>
-    <img src="projects\Bangladesh2.0\assets\hero.png" alt="">
+    <img class="banner-pic"src="assets\hero.png">
 </div>
 
     </header>
     <main>
+
+        <section class="pillars">
+            <h3 class="section-title">Pillars of "Bangladesh 2.0"</h3>
+            <div class main-contents>
+          
+                <img src="assets/card-icon.png" alt="">
+                <h4 class="section-title">Innovation</h4>
+                <img-description>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos  </img-description>
+            </div>
+        <div class main-contents>
+            <img src="assets/card-icon.png" alt="">
+            <h4 class="section-title">Sustainability</h4>
+            <img-description>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </img-description>
+        </div>
+        <div class main-contents>
+            <img src="assets/card-icon.png" alt="">
+            <h4 class="section-title">Infrastructure</h4>
+            <img-description>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </img-description>
+        </div>
+        <div class main-contents>
+            <img src="assets/card-icon.png" alt="">
+            <h4 class="section-title">Empowerment</h4>
+            <img-description>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </img-description>
+        </div>
+        </section>
+
 
     </main>
     <footer>
